--- a/glide.yaml
+++ b/glide.yaml
@@ -1,5 +1,6 @@
 package: github.com/frozzare/go-config
-import: []
+import:
+- package: gopkg.in/yaml.v2
 testImport:
 - package: github.com/frozzare/go-assert
   version: ^1.0.1
