--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,8 @@
 package: github.com/frozzare/go-config
 import:
 - package: gopkg.in/yaml.v2
+- package: github.com/fsnotify/fsnotify
+  version: ~1.4.2
 testImport:
 - package: github.com/frozzare/go-assert
   version: ^1.0.1
