--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ go:
 env:
   - GO15VENDOREXPERIMENT=1
 
-install:
- - mkdir -p $GOPATH/bin
- - which glide >/dev/null || curl https://glide.sh/get | sh
- - glide install
+before_install:
+  - sudo add-apt-repository ppa:masterminds/glide -y
+  - sudo apt-get update -q
+  - sudo apt-get install glide -y
 
 script:
  - go test $(go list ./... | grep -v /vendor/)
